@@ -1,22 +1,25 @@
 package com.doatec.controller;
 
-import com.doatec.dtos.DoacaoResponseDto;
-import com.doatec.dtos.PessoaUpdateDto;
-import com.doatec.dtos.SolicitacaoResponseDto;
-import com.doatec.dtos.UserLoginResponseDto;
+import com.doatec.dto.request.PessoaUpdateRequest;
+import com.doatec.dto.response.DoacaoResponse;
+import com.doatec.dto.response.SolicitacaoResponse;
+import com.doatec.dto.response.UserLoginResponse;
+import com.doatec.mapper.DoacaoMapper;
+import com.doatec.mapper.PessoaMapper;
+import com.doatec.mapper.SolicitacaoMapper;
 import com.doatec.model.account.Pessoa;
 import com.doatec.model.donation.Doacao;
 import com.doatec.model.solicitacao.SolicitacaoHardware;
 import com.doatec.service.DoacaoService;
 import com.doatec.service.PessoaService;
 import com.doatec.service.SolicitacaoService;
+import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/users")
@@ -32,17 +35,10 @@ public class UserController {
     private SolicitacaoService solicitacaoService;
 
     @GetMapping("/{id}")
-    public ResponseEntity<UserLoginResponseDto> getUserById(@PathVariable Integer id) {
+    public ResponseEntity<UserLoginResponse> getUserById(@PathVariable Integer id) {
         Pessoa pessoa = pessoaService.findById(id);
         if (pessoa != null) {
-            UserLoginResponseDto responseDto = new UserLoginResponseDto(
-                    pessoa.getId(),
-                    pessoa.getNome(),
-                    pessoa.getEmail(),
-                    pessoa.getTelefone(),
-                    pessoa.getTipo(),
-                    pessoa.getDocumento()
-            );
+            UserLoginResponse responseDto = PessoaMapper.toResponse(pessoa);
             return ResponseEntity.ok(responseDto);
         } else {
             return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
@@ -50,7 +46,7 @@ public class UserController {
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<String> updateUser(@PathVariable Integer id, @RequestBody PessoaUpdateDto dto) {
+    public ResponseEntity<String> updateUser(@PathVariable Integer id, @Valid @RequestBody PessoaUpdateRequest dto) {
         try {
             Pessoa pessoaAtualizada = pessoaService.updatePessoaProfile(id, dto);
             return ResponseEntity.ok("Perfil atualizado com sucesso para " + pessoaAtualizada.getEmail());
@@ -62,20 +58,20 @@ public class UserController {
     }
 
     @GetMapping("/{id}/donations")
-    public ResponseEntity<List<DoacaoResponseDto>> getUserDonations(@PathVariable Integer id) {
+    public ResponseEntity<List<DoacaoResponse>> getUserDonations(@PathVariable Integer id) {
         List<Doacao> doacoes = doacaoService.findDoacoesByDoadorId(id);
-        List<DoacaoResponseDto> responseDtos = doacoes.stream()
-                .map(DoacaoResponseDto::new)
-                .collect(Collectors.toList());
+        List<DoacaoResponse> responseDtos = doacoes.stream()
+                .map(DoacaoMapper::toResponse)
+                .toList();
         return ResponseEntity.ok(responseDtos);
     }
 
     @GetMapping("/{id}/solicitacoes")
-    public ResponseEntity<List<SolicitacaoResponseDto>> getUserSolicitacoes(@PathVariable Integer id) {
+    public ResponseEntity<List<SolicitacaoResponse>> getUserSolicitacoes(@PathVariable Integer id) {
         List<SolicitacaoHardware> solicitacoes = solicitacaoService.findSolicitacoesByAlunoId(id);
-        List<SolicitacaoResponseDto> responseDtos = solicitacoes.stream()
-                .map(SolicitacaoResponseDto::new)
-                .collect(Collectors.toList());
+        List<SolicitacaoResponse> responseDtos = solicitacoes.stream()
+                .map(SolicitacaoMapper::toResponse)
+                .toList();
         return ResponseEntity.ok(responseDtos);
     }
 }
